syntax = "proto3";

package useradmin;

service UserAdminGrpcService {
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc UpdateUserStatus(UpdateUserStatusRequest) returns (UpdateUserStatusResponse);
  rpc UnblockUser(UnblockUserRequest) returns (UnblockUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
  rpc GetUsersByStatus(GetUsersByStatusRequest) returns (GetUsersByStatusResponse);
  rpc GetAllUsersWithoutPagination(GetAllUsersWithoutPaginationRequest) returns (GetAllUsersWithoutPaginationResponse);
}

message GetAllUsersRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetAllUsersResponse {
  repeated UserData users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  int32 totalPages = 5;
  bool success = 6;
  string message = 7;
}

message GetUserByIdRequest {
  string userId = 1;
}

message GetUserByIdResponse {
  UserData user = 1;
  bool success = 2;
  string message = 3;
}

message UpdateUserStatusRequest {
  string userId = 1;
}

message UpdateUserStatusResponse {
  bool success = 1;
  string message = 2;
}

message UnblockUserRequest{
  string userId = 1;
}

message UnblockUserResponse {
  bool success = 1;
  string message = 2;
}

message DeleteUserRequest {
  string userId = 1;
  string reason = 3;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message SearchUsersRequest {
  string query = 1;
}

message SearchUsersResponse {
  repeated UserData users = 1;
  bool success = 2;
  string message = 3;
}

message GetUsersByStatusRequest {
  string status=1;
}
message GetUsersByStatusResponse {
  repeated UserData users = 1;
  bool success=2;
  string message=3;
}
message GetAllUsersWithoutPaginationRequest {}
message GetAllUsersWithoutPaginationResponse {
 repeated UserData users = 1;
  bool success=2;
  string message=3;
}

message UserData {
  string id = 1;
  string email = 2;
  string name=3;
  string phone = 4;
  string status = 5;
  string role = 6;
}
